# Modular-Backend

./: pyproject.toml
attached_assets/: Pasted-You-are-an-expert-backend-engineer-Build-a-modular-Pyth_1773299412352.txt
semiconductor-search/: requirements.txt
semiconductor-search/api/: routes.py
semiconductor-search/config/: categories_config.py  ranking_weights.py  settings.py
semiconductor-search/data/: demo_products.json  products.csv
semiconductor-search/database/: db_client.py
semiconductor-search/docs/: APPLICATION_FLOW.md  CHAT_API_REQUEST_TEMPLATE.md
semiconductor-search/embeddings/: embedding_service.py
semiconductor-search/frontend/: app.py
semiconductor-search/ingestion/: category_detector.py  csv_loader.py  datasheet_loader.py  html_loader.py  html_parser.py  run_ingestion.py  spec_normalizer.py
semiconductor-search/llm/: product_intelligence.py
semiconductor-search/search/: comparison_engine.py  hybrid_search.py  test_hybrid_search.py
semiconductor-search/utils/: feature_builder.py
semiconductor-search/vector_db/: __init__.py  service.py
