[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "openai>=2.26.0",
    "oracledb>=3.4.2",
    "pypdf>=5.5.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
